--- a/1.html
+++ b/1.html
@@ -24,7 +24,7 @@
     <div id="container">
         <div id="headerLine"></div>
         <nav>
-            <a href="home.html" class="navItem" id="home">Home</a>
+            <a href="index.html" class="navItem" id="home">Home</a>
             <a href="about.html" class="navItem" id="aboutMe">About Me</a>
             <a href="work.html" class="navItem active" id="work">Work</a>
         </nav>
