--- a/2.html
+++ b/2.html
@@ -14,7 +14,9 @@
           <a href="about.html" class="navItem" id="aboutMe">About Me</a>
           <a href="work.html" class="navItem active" id="work">Work</a>
       </nav>
-      <img class="logo" src="images/home1.png" alt="Logo" />
+      <a href="index.html" style="text-decoration: none;"> 
+        <img class="logo" src="images/home1.png" alt="Logo" />
+    </a>
     </div>
       <div style="position: relative;">
         <div style="width: 387px; height: 175px; left: 64px; top: 6705px; position: absolute; border-radius: 30px; border: 5px #FC7EA4 dotted"></div>
