--- a/4.html
+++ b/4.html
@@ -14,7 +14,9 @@
             <a href="about.html" class="navItem" id="aboutMe">About Me</a>
             <a href="work.html" class="navItem active" id="work">Work</a>
         </nav>
-      <img class="logo" src="images/home1.png" alt="Logo" />
+        <a href="index.html" style="text-decoration: none;"> 
+            <img class="logo" src="images/home1.png" alt="Logo" />
+        </a>
     </div>
       <div style=" position: relative;">
         <div style="width: 1238px; height: 0px; left: 137px; top: 1211px; position: absolute; border: 1px #D9D9D9 solid"></div>
