--- a/about.html
+++ b/about.html
@@ -41,7 +41,9 @@
             <a href="work.html" class="navItem" id="work">Work</a>
         </nav>
         
-        <img class="logo" src="images/home1.png" alt="Logo" />
+        <a href="index.html" style="text-decoration: none;"> 
+            <img class="logo" src="images/home1.png" alt="Logo" />
+        </a>
         <img class="profileImage" src="images/about1.png" alt="Profile Image" />
         <div id="aboutMeHeader" style="font-family: Inter, sans-serif;">About Me</div>
         <div id="bio" style="font-family: Inter, sans-serif;">
