--- a/work.html
+++ b/work.html
@@ -14,7 +14,9 @@
             <a href="about.html" class="navItem" id="aboutMe">About Me</a>
             <a href="work.html" class="navItem active" id="work">Work</a>
         </nav>
-        <img class="logo" src="images/home1.png" alt="Logo" />
+        <a href="index.html" style="text-decoration: none;"> 
+            <img class="logo" src="images/home1.png" alt="Logo" />
+        </a>
         <div id="footer">copyright @ mounika reddy - 2023</div>
     </div>
     <div style="font-family: Inter, sans-serif;">
