--- a/1.html
+++ b/1.html
@@ -28,7 +28,9 @@
             <a href="about.html" class="navItem" id="aboutMe">About Me</a>
             <a href="work.html" class="navItem active" id="work">Work</a>
         </nav>
-        <img class="logo" src="images/home1.png" alt="Logo" />
+        <a href="index.html" style="text-decoration: none;"> 
+            <img class="logo" src="images/home1.png" alt="Logo" />
+        </a>
     </div>
     <div style="height: 6700px; margin: auto;">
         <div style="left: 78px; top: 120px; position: absolute; color: black; font-size: 20px; font-family: Inter, sans-serif, sans-serif; font-weight: 600; word-wrap: break-word; ">CONNECT CAFE APP</div>
