--- a/3.html
+++ b/3.html
@@ -14,7 +14,9 @@
             <a href="about.html" class="navItem" id="aboutMe">About Me</a>
             <a href="work.html" class="navItem active" id="work">Work</a>
         </nav>
-        <img class="logo" src="images/home1.png" alt="Logo" />
+        <a href="index.html" style="text-decoration: none;"> 
+            <img class="logo" src="images/home1.png" alt="Logo" />
+        </a>
     </div>
     <div style=" position: relative; ">
         <div style="width: 373px; height: 373px; left: 929px; top: 1243px; position: absolute; border-radius: 9999px; border: 30px #365328 solid"></div>
