--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Inter, sans-serif; /* Adjust as necessary for the desired font */
+            font-family: Inter, sans-serif; 
             text-align: center;
             background-color: #FFFFFF;
             margin: 0;
@@ -18,15 +18,15 @@
         }
 
         .page-container {
-            max-width: 800px; /* Adjust width to your preference */
+            max-width: 800px; 
             width: 90%;
             margin: auto;
         }
 
         .logo {
-            width: 300px; /* Adjust size as needed */
+            width: 300px; 
             display: block;
-            margin: 0 auto 50px auto; /* Spacing below the logo */
+            margin: 0 auto 50px auto; 
             position: relative;
         }
 
@@ -34,14 +34,14 @@
             color: #3A3A3A;
             font-size: 80px;
             font-weight: 700;
-            margin-bottom: 30px; /* Adjust margin to your preference */
+            margin-bottom: 30px; 
         }
 
         h2 {
             color: #ADADAD;
             font-size: 24px;
             font-weight: 600;
-            margin-bottom: 50px; /* Adjust margin to your preference */
+            margin-bottom: 50px; 
         }
 
         button {
@@ -75,13 +75,16 @@
             align-items: center;
             justify-content: center;
             color: black;
+            text-decoration: none;
             font-size: 24px;
             font-weight: 700;
         }
-
-        .linkedin-icon a:hover {
-            background-color: #444;
+        .linkedin-icon a:visited { 
+            color: black; 
+            text-decoration: none;
         }
+
+       
 
     </style>
     <title>Home | Design Portfolio</title>
@@ -103,73 +106,3 @@
 </body>
 
 </html>
-
-
-<!--
-body {
-    background: white;
-    font-family: Inter, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.page-container {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    text-align: center;
-}
-
-.logo {
-    width: 300px; 
-    display: block;
-    margin: 0 auto 50px auto;
-}
-
-h1 {
-    color: #3A3A3A;
-    font-size: 80px;
-    font-weight: 700;
-}
-
-h2 {
-    color: #ADADAD;
-    font-size: 24px;
-    font-weight: 600;
-}
-
-button {
-    width: 151px;
-    height: 41px;
-    background: black;
-    color: white;
-    font-size: 16px;
-    font-weight: 600;
-    border: none;
-    border-radius: 30px;
-    margin-top: 20px;
-    cursor: pointer;
-}
-
-button + button {
-    margin-top: 10px;
-}
-
-.linkedin-icon {
-    width: 52px;
-    height: 52px;
-    background: #D9D9D9;
-    border-radius: 50%;
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: black;
-    font-size: 24px;
-    font-weight: 700;
-}
--->
