--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     <div id="resumeModal">
         <img 
             style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); max-width: 100%; max-height: 100%;" 
-            src="images/about2.png" 
+            src="images/about2.jpg" 
             alt="Mounika Reddy's Resume"
         />
         <!-- Close Button -->
